# UFC-Fighter-Prediction-using-multi-ML-models

./: .gitignore  README.md  pyproject.toml
artifacts/: README.md
artifacts/metrics/: README.md  evaluation_method.csv  evaluation_rolling_cv_winner.csv  evaluation_round_stage1.csv  evaluation_round_stage2.csv  evaluation_winner_full_test.csv  evaluation_winner_vs_odds.csv
artifacts/metrics/archive/: evaluation_round_legacy.csv
artifacts/models/: deep_nn_model_method.h5  deep_nn_model_winner.h5
data/: README.md
data/features/: selected_features_40.csv
data/processed/: filtered_data_40_features.csv  ufc-master-fe.csv
docs/: architecture.md  feature_engineering.md
notebooks/: README.md
notebooks/02_baseline/: baseline_random_forest.ipynb  legacy_export.py
notebooks/03_feature_selection/: feature_selection.ipynb  legacy_export.py
notebooks/04_model_comparison/: legacy_export.py  model_comparison.ipynb
notebooks/05_hyperparameter_tuning/: deep_learning_tuning.ipynb  legacy_dl_export.py  legacy_model_export.py  model_tuning.ipynb
notebooks/06_pipeline/: end_to_end_pipeline.ipynb  legacy_export.py
notebooks/07_evaluation/: evaluation_framework.ipynb
scripts/: build_features.py  evaluate.py
src/ufc_prediction/: __init__.py  paths.py
src/ufc_prediction/evaluation/: __init__.py  metrics.py
src/ufc_prediction/features/: __init__.py  history.py
tests/: test_evaluation_metrics.py  test_history_features.py  test_paths.py
